LIST OF CHANGES

- Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes,
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expected checksum value, which corresponds to the latest release.
 - GitHub CI - updated deprecated v2 runner action to v3

release 101.5.0 (2024-09-04)
 - Moved the parser for the LIMS reference genome notation from
   npg_tracking::data::reference::find to a new package
   npg_tracking::data::reference::util, thus providing a stand-alone
   implementation of the parser.

   Removed dependency of st::api::lims on npg_tracking::data::reference::find
   since the latter brings in the dependency on npg_tracking::data::reference::list,
   which requires that the reference repository root is defined and exists.
   Instead used the reference genome notation parser from
   npg_tracking::data::reference::util.
 - fixes issues with tests for npg_seq_pipeline 68.5.0 and higher

release 101.4.0 (2024-08-30)
 - Added species_from_reference_genome method to st::api::lims. If the
   reference_genome value is defined, this new method returns the name of the
   species. parse_reference_genome from npg_tracking::data::reference::find
   is used for parsing the reference genome string.

release 101.3.0 (2024-08-05)
 - Provided a direct access to the default section of the study configuration
   file.
 - Enhanced a textual listing of instruments
   Added a column for recently used staging servers so that the loaders can
   easily spot instruments, which write to the same server.
 - Update documentation for tags
 - docs
   - Automatic confluence update for 'docs/api_usage.md',